--- a/Hyrbid_Kringing_analysis.ipynb
+++ b/Hyrbid_Kringing_analysis.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 1,
    "id": "acd10e65-7462-483c-a455-01bc81c8cbe4",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 2,
    "id": "c5643a5c-7363-4c55-b874-3bfcc1429cc5",
    "metadata": {},
    "outputs": [
@@ -252,7 +252,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 341,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,10 +268,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 28,
    "id": "ad285ed2-73a3-4beb-a197-9687d9e13f6d",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['index', 'station_id', 'month', 'Unnamed: 0', 'lat', 'long', 'mean_no2',\n",
+      "       'year', 'dayofmonth', 'dayofyear', 'counter', 'weekend', 'sp', 'swvl1',\n",
+      "       't2m', 'tp', 'u10', 'v10', 'blh', 'u100', 'v100', 'p_roads_1000',\n",
+      "       's_roads_1700', 's_roads_3000', 'tropomi', 'pod_den_1100', 'Z_r', 'Z'],\n",
+      "      dtype='object')\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -295,14 +306,14 @@
        "      <th></th>\n",
        "      <th>station_id</th>\n",
        "      <th>month</th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>lat</th>\n",
        "      <th>long</th>\n",
        "      <th>mean_no2</th>\n",
        "      <th>year</th>\n",
-       "      <th>dayofmonth</th>\n",
-       "      <th>dayofyear</th>\n",
-       "      <th>counter</th>\n",
+       "      <th>sp</th>\n",
+       "      <th>swvl1</th>\n",
+       "      <th>t2m</th>\n",
+       "      <th>tp</th>\n",
        "      <th>...</th>\n",
        "      <th>blh</th>\n",
        "      <th>u100</th>\n",
@@ -321,160 +332,160 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>11.0</td>\n",
        "      <td>33.553056</td>\n",
-       "      <td>-86.815000</td>\n",
+       "      <td>-86.815</td>\n",
        "      <td>11.176059</td>\n",
        "      <td>2019.0</td>\n",
-       "      <td>19.086957</td>\n",
-       "      <td>19.086957</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>99724.87984</td>\n",
+       "      <td>0.426193</td>\n",
+       "      <td>280.264083</td>\n",
+       "      <td>0.006967</td>\n",
        "      <td>...</td>\n",
        "      <td>464.630521</td>\n",
        "      <td>-0.414841</td>\n",
        "      <td>1.947801</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>3.828940</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.82894</td>\n",
        "      <td>8.555133</td>\n",
        "      <td>4.437010e+15</td>\n",
        "      <td>2642.464651</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>178.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>346.0</td>\n",
-       "      <td>33.521427</td>\n",
-       "      <td>-86.844112</td>\n",
-       "      <td>12.312605</td>\n",
+       "      <td>2</td>\n",
+       "      <td>33.553056</td>\n",
+       "      <td>-86.815</td>\n",
+       "      <td>10.170781</td>\n",
        "      <td>2019.0</td>\n",
-       "      <td>16.000000</td>\n",
-       "      <td>16.000000</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>99859.52138</td>\n",
+       "      <td>0.426193</td>\n",
+       "      <td>280.264083</td>\n",
+       "      <td>0.003241</td>\n",
        "      <td>...</td>\n",
-       "      <td>464.630521</td>\n",
-       "      <td>-0.414841</td>\n",
-       "      <td>1.947801</td>\n",
-       "      <td>5.95545</td>\n",
-       "      <td>2.959208</td>\n",
-       "      <td>11.084034</td>\n",
-       "      <td>4.844770e+15</td>\n",
-       "      <td>2630.140482</td>\n",
-       "      <td>0.860871</td>\n",
-       "      <td>189.0</td>\n",
+       "      <td>608.579581</td>\n",
+       "      <td>0.351088</td>\n",
+       "      <td>-0.346133</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.82894</td>\n",
+       "      <td>8.555133</td>\n",
+       "      <td>3.565690e+15</td>\n",
+       "      <td>2642.464651</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>178.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>681.0</td>\n",
-       "      <td>33.483780</td>\n",
-       "      <td>-112.142560</td>\n",
-       "      <td>21.821502</td>\n",
+       "      <td>3</td>\n",
+       "      <td>33.553056</td>\n",
+       "      <td>-86.815</td>\n",
+       "      <td>9.005671</td>\n",
        "      <td>2019.0</td>\n",
-       "      <td>16.000000</td>\n",
-       "      <td>16.000000</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>99332.41407</td>\n",
+       "      <td>0.426193</td>\n",
+       "      <td>280.264083</td>\n",
+       "      <td>0.004815</td>\n",
        "      <td>...</td>\n",
-       "      <td>421.091444</td>\n",
-       "      <td>0.406358</td>\n",
-       "      <td>0.662893</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>10.210007</td>\n",
-       "      <td>27.894930</td>\n",
-       "      <td>1.030000e+16</td>\n",
-       "      <td>6362.811560</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>334.0</td>\n",
+       "      <td>587.417161</td>\n",
+       "      <td>0.726758</td>\n",
+       "      <td>1.944154</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.82894</td>\n",
+       "      <td>8.555133</td>\n",
+       "      <td>3.475220e+15</td>\n",
+       "      <td>2642.464651</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>178.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
        "      <td>1</td>\n",
-       "      <td>1046.0</td>\n",
-       "      <td>33.457970</td>\n",
-       "      <td>-112.046590</td>\n",
-       "      <td>23.353431</td>\n",
+       "      <td>4</td>\n",
+       "      <td>33.553056</td>\n",
+       "      <td>-86.815</td>\n",
+       "      <td>9.835197</td>\n",
        "      <td>2019.0</td>\n",
-       "      <td>16.000000</td>\n",
-       "      <td>16.000000</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>99325.53875</td>\n",
+       "      <td>0.426193</td>\n",
+       "      <td>280.264083</td>\n",
+       "      <td>0.002818</td>\n",
        "      <td>...</td>\n",
-       "      <td>421.091444</td>\n",
-       "      <td>0.406358</td>\n",
-       "      <td>0.662893</td>\n",
-       "      <td>14.72194</td>\n",
-       "      <td>6.752895</td>\n",
-       "      <td>34.580018</td>\n",
-       "      <td>8.786030e+15</td>\n",
-       "      <td>7065.979555</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>333.0</td>\n",
+       "      <td>640.471893</td>\n",
+       "      <td>0.906035</td>\n",
+       "      <td>2.034346</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.82894</td>\n",
+       "      <td>8.555133</td>\n",
+       "      <td>3.646560e+15</td>\n",
+       "      <td>2642.464651</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>178.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
        "      <td>1</td>\n",
-       "      <td>1404.0</td>\n",
-       "      <td>33.369850</td>\n",
-       "      <td>-112.620680</td>\n",
-       "      <td>10.139339</td>\n",
+       "      <td>5</td>\n",
+       "      <td>33.553056</td>\n",
+       "      <td>-86.815</td>\n",
+       "      <td>9.251750</td>\n",
        "      <td>2019.0</td>\n",
-       "      <td>16.000000</td>\n",
-       "      <td>16.000000</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>99273.97391</td>\n",
+       "      <td>0.426193</td>\n",
+       "      <td>280.264083</td>\n",
+       "      <td>0.003752</td>\n",
        "      <td>...</td>\n",
-       "      <td>494.862550</td>\n",
-       "      <td>0.879382</td>\n",
-       "      <td>0.716942</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>5.304251</td>\n",
-       "      <td>10.782592</td>\n",
-       "      <td>3.269870e+15</td>\n",
-       "      <td>55.396922</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>262.0</td>\n",
+       "      <td>617.004901</td>\n",
+       "      <td>0.723391</td>\n",
+       "      <td>1.006420</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.82894</td>\n",
+       "      <td>8.555133</td>\n",
+       "      <td>2.270010e+15</td>\n",
+       "      <td>2642.464651</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>178.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 27 columns</p>\n",
+       "<p>5 rows × 22 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   station_id  month  Unnamed: 0        lat        long   mean_no2    year  \\\n",
-       "0           1      1        11.0  33.553056  -86.815000  11.176059  2019.0   \n",
-       "1           2      1       346.0  33.521427  -86.844112  12.312605  2019.0   \n",
-       "2           3      1       681.0  33.483780 -112.142560  21.821502  2019.0   \n",
-       "3           4      1      1046.0  33.457970 -112.046590  23.353431  2019.0   \n",
-       "4           5      1      1404.0  33.369850 -112.620680  10.139339  2019.0   \n",
+       "   station_id  month        lat    long   mean_no2    year           sp  \\\n",
+       "0           1      1  33.553056 -86.815  11.176059  2019.0  99724.87984   \n",
+       "1           1      2  33.553056 -86.815  10.170781  2019.0  99859.52138   \n",
+       "2           1      3  33.553056 -86.815   9.005671  2019.0  99332.41407   \n",
+       "3           1      4  33.553056 -86.815   9.835197  2019.0  99325.53875   \n",
+       "4           1      5  33.553056 -86.815   9.251750  2019.0  99273.97391   \n",
        "\n",
-       "   dayofmonth  dayofyear  counter  ...         blh      u100      v100  \\\n",
-       "0   19.086957  19.086957      1.0  ...  464.630521 -0.414841  1.947801   \n",
-       "1   16.000000  16.000000      1.0  ...  464.630521 -0.414841  1.947801   \n",
-       "2   16.000000  16.000000      1.0  ...  421.091444  0.406358  0.662893   \n",
-       "3   16.000000  16.000000      1.0  ...  421.091444  0.406358  0.662893   \n",
-       "4   16.000000  16.000000      1.0  ...  494.862550  0.879382  0.716942   \n",
+       "      swvl1         t2m        tp  ...         blh      u100      v100  \\\n",
+       "0  0.426193  280.264083  0.006967  ...  464.630521 -0.414841  1.947801   \n",
+       "1  0.426193  280.264083  0.003241  ...  608.579581  0.351088 -0.346133   \n",
+       "2  0.426193  280.264083  0.004815  ...  587.417161  0.726758  1.944154   \n",
+       "3  0.426193  280.264083  0.002818  ...  640.471893  0.906035  2.034346   \n",
+       "4  0.426193  280.264083  0.003752  ...  617.004901  0.723391  1.006420   \n",
        "\n",
-       "   p_roads_1000  s_roads_1700  s_roads_3000       tropomi  pod_den_1100  \\\n",
-       "0       0.00000      3.828940      8.555133  4.437010e+15   2642.464651   \n",
-       "1       5.95545      2.959208     11.084034  4.844770e+15   2630.140482   \n",
-       "2       0.00000     10.210007     27.894930  1.030000e+16   6362.811560   \n",
-       "3      14.72194      6.752895     34.580018  8.786030e+15   7065.979555   \n",
-       "4       0.00000      5.304251     10.782592  3.269870e+15     55.396922   \n",
+       "   p_roads_1000  s_roads_1700  s_roads_3000       tropomi  pod_den_1100  Z_r  \\\n",
+       "0           0.0       3.82894      8.555133  4.437010e+15   2642.464651  0.0   \n",
+       "1           0.0       3.82894      8.555133  3.565690e+15   2642.464651  0.0   \n",
+       "2           0.0       3.82894      8.555133  3.475220e+15   2642.464651  0.0   \n",
+       "3           0.0       3.82894      8.555133  3.646560e+15   2642.464651  0.0   \n",
+       "4           0.0       3.82894      8.555133  2.270010e+15   2642.464651  0.0   \n",
        "\n",
-       "        Z_r      Z  \n",
-       "0  0.000000  178.0  \n",
-       "1  0.860871  189.0  \n",
-       "2  0.000000  334.0  \n",
-       "3  0.000000  333.0  \n",
-       "4  0.000000  262.0  \n",
+       "       Z  \n",
+       "0  178.0  \n",
+       "1  178.0  \n",
+       "2  178.0  \n",
+       "3  178.0  \n",
+       "4  178.0  \n",
        "\n",
-       "[5 rows x 27 columns]"
+       "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 342,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +496,24 @@
     "\n",
     "january = monthly.loc[monthly['month'] == 1]\n",
     "lat_lon = january[['lat', 'long']].to_numpy()\n",
-    "january.set_index('station_id').reset_index().head()"
+    "\n",
+    "january.sort_values(['station_id', 'month'], axis=0, inplace=True)\n",
+    "january.reset_index(inplace=True)\n",
+    "print(january.columns)\n",
+    "january.drop(['index', 'Unnamed: 0', 'counter', 'dayofyear', 'weekend', 'dayofmonth'], axis=1, inplace=True)\n",
+    "\n",
+    "\n",
+    "january.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "7cdbf494-bf19-43e5-bd60-9e6b8dbff42b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "january.to_csv(r'C:\\Users\\xavie\\Documents\\DATASETS\\master_monthly_no2_jan4.csv')"
    ]
   },
   {
